# ml-playground

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/misc/: 00_torch_primitives.ipynb  01_jevml_test.ipynb  02_linear_train.ipynb  03_linear_softmax_train.ipynb
src/jevml/: utils.py
src/jevml/data/: mnist.py  simple.py
src/jevml/models/: base.py  linear.py  softmax.py
src/jevml/optimizers/: simple.py
src/jevml/trainers/: simple.py
