[project]
name = "ml-playground"
version = "0.1.0"
description = "Jev's ML playground"
readme = "README.md"
requires-python = ">=3.11,<3.13"
packages = [{ include = "jevml", from = "src" }]

dependencies = [
    "jupyterlab>=4.4.10",
    "pre-commit>=4.3.0",
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    "torchvision>=0.24.0",
]


[project.optional-dependencies]
dev = [
  "pre-commit",
  "ruff",
  "pytest",
  "nbstripout",
]

